--- a/index.html
+++ b/index.html
@@ -18,37 +18,18 @@
       rel="stylesheet"
     />
 
-    <!-- ✅ HERE MAPS SDK (ADD THIS BEFORE </head>) -->
-    <script
-      src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
-      type="text/javascript"
-      charset="utf-8"
-    ></script>
-    <script
-      src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
-      type="text/javascript"
-      charset="utf-8"
-    ></script>
-    <script
-      src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"
-      type="text/javascript"
-      charset="utf-8"
-    ></script>
-    <script
-      src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"
-      type="text/javascript"
-      charset="utf-8"
-    ></script>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://js.api.here.com/v3/3.1/mapsjs-ui.css"
-    />
-    <!-- ✅ END HERE SDK -->
+    <!-- HERE Maps scripts -->
+    <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
+    <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
+    <script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
+    <script src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
+    <link rel="stylesheet" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+
+    <!-- FIXED! 👇 -->
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
